compiler/compiler/tests/language/negative/oopSurfaceRoleCapability/surface/wrongReturnType.qn
extract HttpCtx<...Caps> : pub BodyExtractor<...Caps> {
  body<T>() -> T {
    return T()
  }
}
